gccida/c0/cse_end_of_basic_block
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7312:26: error: use of undeclared identifier 'uid_cuid_0'
low_cuid = *( ( _DWORD *)uid_cuid_0 + insn->fld[0].rtint); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7353:50: error: use of undeclared identifier 'uid_cuid_0'
if ( p->fld[0].rtint <= max_uid && *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint) > high_cuid ) 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7354:27: error: use of undeclared identifier 'uid_cuid_0'
high_cuid = *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint); 
                          ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7355:50: error: use of undeclared identifier 'uid_cuid_0'
if ( p->fld[0].rtint <= max_uid && *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint) < low_cuid ) 
                                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7356:26: error: use of undeclared identifier 'uid_cuid_0'
low_cuid = *( ( _DWORD *)uid_cuid_0 + p->fld[0].rtint); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7360:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[4]; 
          ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7381:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
q = ( rtx)q[1] ) 
          ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7397:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[4]; 
          ^~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/cse.c:7427:11: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
p = ( rtx)p[4]; 
          ^~~~
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/cse_end_of_basic_block/src/obj/cse.o] Error 1
